--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@pythnetwork/client": "^2.17.0",
+    "@pythnetwork/pyth-evm-js": "^1.16.1",
     "dotenv": "^16.0.3"
   }
 }
